Old subtitle track is not deleted on 'src' attribute change event https://bugs.webkit.org/show_bug.cgi?id=175031

Patch by Kirill Ovchinnikov <kirill.ovchinnikov@lge.com> on 2017-08-09
Reviewed by Eric Carlson.

Source/WebCore:

Test: media/track/text-track-src-change.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::textTrackReadyStateChanged):
* html/HTMLTrackElement.cpp:
(WebCore::HTMLTrackElement::loadTimerFired):
* html/shadow/MediaControls.cpp:
(WebCore::MediaControls::clearTextDisplayContainer):
* html/shadow/MediaControls.h:

LayoutTests:

* media/track/text-track-src-change-expected.txt: Added.
* media/track/text-track-src-change.html: Added.

Canonical link: https://commits.webkit.org/192096@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220472 268f45cc-cd09-0410-ab3c-d52691b4dbfc